# LinuxComparatorPackages

./: README.md  dependency-reduced-pom.xml  pom.xml
src/main/: CMakeLists.txt
src/main/cpp/: CMakeCache.txt  Java_RpmVersionComparator.cpp  org_example_RpmVersionComparator.h
src/main/java/org/example/: Main.java  RpmVersionComparator.java
